Commit finale.